--- a/arch/arm/boot/dts/msm8610-camera-sensor-cdp-mtp.dtsi
+++ b/arch/arm/boot/dts/msm8610-camera-sensor-cdp-mtp.dtsi
@@ -11,14 +11,13 @@
  * GNU General Public License for more details.
  */
 
-&i2c {
-
-	led_flash0: qcom,led-flash@60 {
+&i2c_sensors {
+   flashlight: qcom,led-flash@60 {
 		cell-index = <0>;
 		reg = <0x60>;
-		qcom,slave-id = <0x60 0x00 0x0011>;
-		compatible = "qcom,led-flash";
-		qcom,flash-name = "adp1600";
+		qcom,slave-id = <0x60 0x00 0x53>;
+		compatible = "qcom,as3644";
+		qcom,flash-name = "as3644";
 		qcom,flash-type = <1>;
 		qcom,gpio-no-mux = <0>;
 		gpios = <&msmgpio 18 0>,
@@ -29,6 +28,16 @@
 		qcom,gpio-req-tbl-flags = <0 0>;
 		qcom,gpio-req-tbl-label = "FLASH_EN",
 			"FLASH_NOW";
+   };
+};
+
+ 
+&i2c {
+	led_flash0: qcom,camera-led-flash {
+		cell-index = <0>;
+		compatible = "qcom,camera-led-flash";
+		qcom,flash-type = <1>;
+		qcom,flash-source = <&flashlight>;
 	};
 
 	actuator0: qcom,actuator@6e {
@@ -90,15 +99,14 @@
 		qcom,cam-vreg-op-mode = <200000 8000>;
 		qcom,gpio-no-mux = <0>;
 		gpios = <&msmgpio 13 0>,
-			<&msmgpio 21 0>,
-			<&msmgpio 20 0>;
+			<&msmgpio 21 0>;
+
 		qcom,gpio-reset = <1>;
-		qcom,gpio-standby = <2>;
-		qcom,gpio-req-tbl-num = <0 1 2>;
-		qcom,gpio-req-tbl-flags = <1 0 0>;
+
+		qcom,gpio-req-tbl-num = <0 1>;
+		qcom,gpio-req-tbl-flags = <1 0>;
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK",
-			"CAM_RESET1",
-			"CAM_STANDBY";
+			"CAM_RESET1";
 		qcom,cam-power-seq-type = "sensor_vreg",
 			"sensor_vreg", "sensor_clk",
 			"sensor_gpio", "sensor_gpio";
@@ -133,15 +141,12 @@
 		qcom,cam-vreg-op-mode = <200000 8000 80000 100000>;
 		qcom,gpio-no-mux = <0>;
 		gpios = <&msmgpio 13 0>,
-			<&msmgpio 21 0>,
-			<&msmgpio 20 0>;
+			<&msmgpio 21 0>;
 		qcom,gpio-reset = <1>;
-		qcom,gpio-standby = <2>;
-		qcom,gpio-req-tbl-num = <0 1 2>;
-		qcom,gpio-req-tbl-flags = <1 0 0>;
+		qcom,gpio-req-tbl-num = <0 1>;
+		qcom,gpio-req-tbl-flags = <1 0>;
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK",
-			"CAM_RESET1",
-			"CAM_STANDBY";
+			"CAM_RESET1";
 		qcom,csi-lane-assign = <0xe4>;
 		qcom,csi-lane-mask = <0x3>;
 		qcom,sensor-position = <0>;
@@ -171,60 +176,18 @@
 		qcom,cam-vreg-op-mode = <200000 8000 80000 100000>;
 		qcom,gpio-no-mux = <0>;
 		gpios = <&msmgpio 13 0>,
-			<&msmgpio 21 0>,
-			<&msmgpio 20 0>;
+			<&msmgpio 21 0>;
 		qcom,gpio-reset = <1>;
-		qcom,gpio-standby = <2>;
-		qcom,gpio-req-tbl-num = <0 1 2>;
-		qcom,gpio-req-tbl-flags = <1 0 0>;
+		qcom,gpio-req-tbl-num = <0 1>;
+		qcom,gpio-req-tbl-flags = <1 0>;
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK",
-			"CAM_RESET1",
-			"CAM_STANDBY";
+			"CAM_RESET1";
 		qcom,csi-lane-assign = <0xe4>;
 		qcom,csi-lane-mask = <0x3>;
 		qcom,sensor-position = <0>;
 		qcom,sensor-mode = <1>;
 		qcom,cci-master = <0>;
 	};
-
-	qcom,camera@6d {
-		compatible = "qcom,ov9724";
-		reg = <0x6d>;
-		qcom,slave-id = <0x20 0x0 0x9724>;
-		qcom,csiphy-sd-index = <1>;
-		qcom,csid-sd-index = <0>;
-		qcom,mount-angle = <90>;
-		qcom,sensor-name = "ov9724";
-		cam_vdig-supply = <&pm8110_l4>;
-		cam_vana-supply = <&pm8110_l19>;
-		cam_vio-supply = <&pm8110_l14>;
-		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana";
-		qcom,cam-vreg-type = <0 1 0>;
-		qcom,cam-vreg-min-voltage = <1200000 0 2850000>;
-		qcom,cam-vreg-max-voltage = <1200000 0 2850000>;
-		qcom,cam-vreg-op-mode = <200000 0 80000>;
-		qcom,gpio-no-mux = <0>;
-		gpios = <&msmgpio 14 0>,
-				<&msmgpio 15 0>,
-				<&msmgpio 8 0>;
-		qcom,gpio-reset = <1>;
-		qcom,gpio-standby = <2>;
-		qcom,gpio-req-tbl-num = <0 1 2>;
-		qcom,gpio-req-tbl-flags = <1 0 0>;
-		qcom,gpio-req-tbl-label = "CAMIF_MCLK",
-				"CAM_RESET",
-				"CAM_STANDBY";
-		qcom,gpio-set-tbl-num = <1 1>;
-		qcom,gpio-set-tbl-flags = <0 2>;
-		qcom,gpio-set-tbl-delay = <1000 4000>;
-		qcom,csi-lane-assign = <0xe4>;
-		qcom,csi-lane-mask = <0x1>;
-		qcom,sensor-position = <1>;
-		qcom,sensor-mode = <1>;
-		qcom,cci-master = <0>;
-		status = "ok";
-	};
-
 	qcom,camera@78 {
 		compatible = "qcom,sp1628";
 		reg = <0x78>;
