--- a/arch/arm/boot/dts/msm8610-v1-mtp.dts
+++ b/arch/arm/boot/dts/msm8610-v1-mtp.dts
@@ -14,7 +14,9 @@
 
 /include/ "msm8610-v1.dtsi"
 /include/ "msm8610-mtp.dtsi"
-/include/ "msm8610-camera-sensor-cdp-mtp.dtsi"
+/include/ "msm8610-camera-sensor-ara.dtsi"
+/include/ "c4_touch.dtsi"
+/include/ "sms_dtv.dtsi"
 
 / {
 	model = "Qualcomm MSM 8610 MTP";
