[NOKIA-MSM8610] ATTS audio tuning tool support
Signed-off-by: zombah <zombah@gmail.com>

Conflicts:
	arch/arm/mach-msm/Kconfig

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -3062,4 +3062,10 @@ config HAS_MACH_MEMUTILS
 	help
 	Faster memcpy performance for Krait
 
+config ATTS_TUNING_TOOL
+	bool "Enable support for ATTS audio tuning tool"
+	depends on MSM_QDSP6_APRV2
+	default n
+	help
+	  Add support for Audio Tuning and Tracing Subsystem (ATTS) device.
 endif
