[NOKIA-MSM8610] Nokia X2 camera sensors and flash led support
Signed-off-by: zombah <zombah@gmail.com>

Conflicts:
	drivers/media/platform/msm/camera_v2/isp/msm_isp32.c
	drivers/media/platform/msm/camera_v2/sensor/io/msm_camera_qup_i2c.c
	drivers/media/platform/msm/vidc/msm_vdec.c
	drivers/media/platform/msm/vidc/msm_venc.c

--- a/drivers/media/platform/msm/camera_v2/sensor/Makefile
+++ b/drivers/media/platform/msm/camera_v2/sensor/Makefile
@@ -19,3 +19,16 @@ obj-$(CONFIG_OV5648) += ov5648.o
 obj-$(CONFIG_MT9M114) += mt9m114.o
 obj-$(CONFIG_SP1628) += sp1628.o
 obj-$(CONFIG_GC0339) += gc0339.o
+
+#because we all think back camera(smiapp) is the default first camera device,
+#now it is probed dependency.The reason why the order in a Makefile matter is 
+#how the current kernel build system works and how the linkers works. To make 
+#a long story short, the build system takes all object files in obj-y and link 
+#them together. It is highly environment dependent but there is high probability 
+#that the linker place first object file in the obj-y in lower address, thus called earlier.  
+#If you just want your driver to be called earlier than other drivers in the same directory, 
+#this is simplest way to do it.
+obj-$(CONFIG_SMIAPP) += smiapp.o
+obj-$(CONFIG_SMIA65PP) += smia65pp.o
+obj-$(CONFIG_OV7695) += ov7695.o
+obj-$(CONFIG_HM03D5) += hm03d5.o
