--- a/drivers/media/platform/msm/camera_v2/Kconfig
+++ b/drivers/media/platform/msm/camera_v2/Kconfig
@@ -200,6 +200,26 @@ config OV8825
 		snapshot config = 3264 * 2448 at 18 fps.
 		2 lanes max fps is 18, 4 lanes max fps is 24.
 
+config OV7695
+	bool "OmniVision OV7695 (MIPI:YUV422,RAW8;SPI:YUV422,RAW8/10,0.3MP(VGA:640*480))"
+	depends on MSMB_CAMERA
+	---help---
+		OmniVision 0.3MP(VGA:640*480) Sensor, support VGA(640*480@30fps),
+		QVGA(320*240@60fps),QQVGA(160*120@120fps), HF(640*20@120fps.)
+		review and snapshot config at 640 * 480 at 30 fps,
+		hfr video at 60, 120 fps. This sensor driver does
+		not support auto focus.
+
+config HM03D5
+	bool "Himax hm03d5 (MIPI:YUV422,RAW8;SPI:YUV422,RAW8/10,0.3MP(VGA:640*480))"
+	depends on MSMB_CAMERA
+	---help---
+		OmniVision 0.3MP(VGA:640*480) Sensor, support VGA(640*480@30fps),
+		QVGA(320*240@60fps),QQVGA(160*120@120fps), HF(640*20@120fps.)
+		review and snapshot config at 640 * 480 at 30 fps,
+		hfr video at 60, 120 fps. This sensor driver does
+		not support auto focus.
+
 config OV8865
 	bool "OmniVision OV8865 (BAYER 8MP)"
 	depends on MSMB_CAMERA
@@ -227,6 +247,51 @@ config OV12830
 		snapshot config = 4224 * 3000 at 15 fps.
 		2 lanes max fps is 18, 4 lanes max fps is 24.
 
+config SMIAPP
+	bool "smia sensor  (BAYER RAW)"
+	depends on MSMB_CAMERA
+	default n
+	---help---
+		General SMIA Bayer Sensor 
+
+config SMIA65PP
+	bool "smia65 sensor  (BAYER RAW),which has XSHUTDOWN signal"
+	depends on MSMB_CAMERA
+	default n
+	---help---
+		General SMIA65 Bayer Sensor 
+		
+config SMIAPP_ACTUATOR
+	bool "eneral SMIAPP actuator"
+	depends on MSMB_CAMERA
+	default n
+	---help---
+		General SMIAPP actuator 
+		
+config MSM_ACTUATOR
+	bool "MSM actuator"
+	depends on MSMB_CAMERA
+	default y
+	---help---
+		General MSM actuator 		
+
+config SMIAPP_EEPROM
+        bool "SMIAPP Camera ROM Interface for Calibration support"
+        depends on MSMB_CAMERA
+        ---help---
+          Enable support for ROM Interface for Calibration
+          Provides interface for reading the Calibration data.
+          and also provides support for writing data in case of FLASH ROM.
+	  Currently supports I2C protocol
+		
+config AS3644
+	bool "led flash as3644"
+	depends on MSMB_CAMERA
+	default y
+	---help---
+		AS3644 led flash support flash mode, assist light mode
+		and shutdown mode.
+		
 config MSM_V4L2_VIDEO_OVERLAY_DEVICE
 	tristate "Qualcomm MSM V4l2 video overlay device"
 	---help---
