--- a/arch/arm/configs/msm8610-nokia_defconfig
+++ b/arch/arm/configs/msm8610-nokia_defconfig
@@ -405,6 +405,7 @@ CONFIG_QPNP_POWER_ON=y
 CONFIG_QPNP_REVID=y
 CONFIG_LRA_VIBRATOR=y
 CONFIG_MSM_IOMMU_V0=y
+CONFIG_SENSORS=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT3_FS=y
