--- a/arch/arm/boot/dts/msm8610-mtp.dtsi
+++ b/arch/arm/boot/dts/msm8610-mtp.dtsi
@@ -93,6 +93,29 @@
 		};
 	};
 
+	i2c@f9928000 {
+        apds9930_prox_als@39 {
+            reg = <0x39>;
+            compatible = "avago,apds9930";
+            vdd-supply = <&pm8110_l19>;
+            vddio-supply = <&pm8110_l14>;
+            apds9930,irq-gpio = <&msmgpio 80 0>;
+            apds9930,ps_detection_threshold = <708>;
+            apds9930,ps_hsythresis_threshold = <430>;
+            apds9930,ps_pulse_number = <3>;
+            apds9930,ps_pdrive_ma = <0x40>;
+            apds9930,ps_pgain = <0x08>;
+            apds9930,ps_poffset = <0>;
+            apds9930,als_threshold_hsytersis = <20>;
+            apds9930,als_use_irq_in_idle = <1>;
+            apds9930,als_ga = <2200>;
+            apds9930,als_coe_b = <186>;
+            apds9930,als_coe_c = <82>;
+            apds9930,als_coe_d = <116>;
+            apds9930,als_df = <52>;
+        };
+    };
+
 	i2c@f9925000 {
 		mpu3050@68 {
 			#address-cells = <1>;
@@ -109,6 +132,51 @@
 			invn,poll-interval = <200>;
 		};
 
+                kionix_acc@1e {
+                        reg = <0x1e>;
+                        compatible = "kionix,kionix_acc";
+                        vdd-supply = <&pm8110_l19>;
+                        vddio-supply = <&pm8110_l14>;
+                        interrupt-parent = <&msmgpio>;
+                        interrupts = <81 0x2>;
+                        kionix_acc,min_interval = <0x5>;
+                        kionix_acc,poll_interval = <200>;
+                        kionix_acc,accel_direction = <6>;
+                        kionix_acc,accel_irq_use_ddtap = <1>;
+                        kionix_acc,accel_res = <3>;
+                        kionix_acc,accel_g_range = <0>;
+                        kionix_acc,accel_tap_z_direction = <1>;
+                        kionix_acc,accel_dtap_z_direction = <1>;
+                };
+
+                n2dm_acc@08 {
+                        reg = <0x08>;
+                        compatible = "st,n2dm_acc";
+                        vdd-supply = <&pm8110_l19>;
+                        vddio-supply = <&pm8110_l14>;
+                        interrupt-parent = <&msmgpio>;
+                        interrupts = <81 0x2>;
+                        n2dm_acc,min_interval = <0x5>;
+                        n2dm_acc,poll_interval = <200>;
+                        n2dm_acc,accel_direction = <6>;
+                        n2dm_acc,accel_irq_use_ddtap = <1>;
+                        n2dm_acc,accel_g_range = <0>;
+                        n2dm_acc,accel_tap_z_direction = <1>;
+                        n2dm_acc,accel_dtap_z_direction = <1>;
+                };
+
+                bma250_acc@18 {
+                        reg = <0x18>;
+                        compatible = "bma,bma250_acc";
+                        vdd-supply = <&pm8110_l19>;
+                        vddio-supply = <&pm8110_l14>;
+                        interrupt-parent = <&msmgpio>;
+                        interrupts = <81 0x2>;
+                        bma250_acc,min_interval = <0x5>;
+                        bma250_acc,poll_interval = <200>;
+                        bma250_acc,accel_direction = <6>;
+                        bma250_acc,accel_g_range = <3>;
+                }; 
 		bmp180@77 {
 			reg = <0x77>;
 			compatible = "bosch,bmp18x";
@@ -129,23 +197,7 @@
 			fsl,irq-gpio = <&msmgpio 81 0x00>;
 			fsl,sensors-position = <5>;
 		};
-		capella@60 {
-			compatible = "capella,cm36283";
-			reg = <0x60>;
-			interrupt-parent = <&msmgpio>;
-			interrupts = <80 0x2>;
-			vdd-supply = <&pm8110_l19>;
-			vio-supply = <&pm8110_l14>;
-			capella,use-polling;
-			capella,interrupt-gpio = <&msmgpio 80 0x2>;
-			capella,levels = <0x0A 0xA0 0xE1 0x140 0x280 0x500 0xA28 0x16A8 0x1F40
-				0x2800>;
-			capella,ps_close_thd_set = <0xa>;
-			capella,ps_away_thd_set = <0x5>;
-			capella,ls_cmd = <0x04>; /* ALS_IT=80ms, INT_PERS=2*/
-			capella,ps_conf1_val = <0x0006>;
-			capella,ps_conf3_val = <0x3010>;
-		};
+
 		nfc-nci@0e {
 			compatible = "qcom,nfc-nci";
 			reg = <0x0e>;
@@ -159,6 +211,16 @@
 		};
 	};
 
+       i2c@f9928000 {
+		betamon_prox@23 {
+			reg = <0x23>;
+			compatible = "liteon,betamon_prox";
+			vdd-supply = <&pm8110_l19>;
+			vddio-supply = <&pm8110_l14>;
+			ltr554,irq-gpio = <&msmgpio 80 0>;
+		};			
+	};
+	
 	gen-vkeys {
 		compatible = "qcom,gen-vkeys";
 		label = "atmel_mxt_ts";
@@ -173,24 +235,6 @@
 	gpio_keys {
 		compatible = "gpio-keys";
 		input-name = "gpio-keys";
-
-		camera_snapshot {
-			label = "camera_snapshot";
-			gpios = <&msmgpio 73 0x1>;
-			linux,input-type = <1>;
-			linux,code = <0x2fe>;
-			gpio-key,wakeup;
-			debounce-interval = <15>;
-		};
-
-		camera_focus {
-			label = "camera_focus";
-			gpios = <&msmgpio 74 0x1>;
-			linux,input-type = <1>;
-			linux,code = <0x210>;
-			gpio-key,wakeup;
-			debounce-interval = <15>;
-		};
 
 		vol_up {
 			label = "volume_up";
@@ -208,10 +252,10 @@
             "INT_LDO_H", "MCLK",
             "Lineout amp", "LINEOUT",
             "MIC BIAS External", "Handset Mic",
-            "MIC BIAS Internal2", "Headset Mic",
+            "MIC BIAS External", "Headset Mic",
             "MIC BIAS External", "Secondary Mic",
             "AMIC1", "MIC BIAS External",
-            "AMIC2", "MIC BIAS Internal2",
+            "AMIC2", "MIC BIAS External",
             "AMIC3", "MIC BIAS External";
     };
 };
@@ -256,7 +300,6 @@
 
 		qcom,cdc-on-demand-supplies = "cdc-vdda-cp",
 					      "cdc-vdd-mic-bias";
-		qcom,cdc-micbias1-ext-cap;
 	};
 
 	msm8x10_wcd_codec@77{
@@ -358,7 +401,7 @@
 	qcom,pad-drv-on = <0x4 0x4 0x4>; /* 10mA, 10mA, 10mA */
 	qcom,pad-drv-off = <0x0 0x0 0x0>; /* 2mA, 2mA, 2mA */
 
-	qcom,clk-rates = <400000 25000000 50000000 100000000 200000000>;
+	qcom,clk-rates = <400000 25000000 47899152 100000000 200000000>;
 
 	#address-cells = <0>;
 	interrupt-parent = <&sdhc_2>;
@@ -376,7 +419,6 @@
 
 &pm8110_chg {
 	status = "ok";
-	qcom,charging-disabled;
 
 	qcom,chgr@1000 {
 		status = "ok";
@@ -445,8 +487,7 @@
 		qcom,rpull-up-kohm = <100>;
 		qcom,vref-batt-therm = <1800000>;
 
-		/include/ "batterydata-palladium.dtsi"
-		/include/ "batterydata-mtp-3000mah.dtsi"
+		/include/ "batterydata-BV5S-1800mAh.dtsi"
 	};
 };
 
@@ -459,19 +500,17 @@
 	qcom,battery-data = <&mtp_batterydata>;
 };
 
+
 &mdss_mdp {
 	qcom,mdss-pref-prim-intf = "dsi";
 	batfet-supply = <&pm8110_chg_batif>;
 };
 
 &mdss_dsi0 {
-	qcom,dsi-pref-prim-pan = <&dsi_truly_wvga_vid>;
+	qcom,dsi-pref-prim-pan = <&dsi_chimei_wvga_cmd>;
 };
 
-&dsi_truly_wvga_vid {
-	qcom,cont-splash-enabled;
+&dsi_chimei_wvga_cmd {
+	/*qcom,cont-splash-enabled; */
 };
 
-&dsi_truly_wvga_cmd {
-	qcom,cont-splash-enabled;
-};
